--- a/_config.yml
+++ b/_config.yml
@@ -26,4 +26,4 @@ plugins:
   - jekyll-paginate
 
 github:
-  repo:           https://github.com/jpatrickdevine.info/hydeaway
+  repo:           https://github.com/jpatrickdevine/hydeaway
